--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="pf-inner">
                 <div class="cmn-title"><p>PORTFOLIO</p></div>
                 <div class="pf-container">
-                    <a href="#" class="portfolio_link">
+                    <a href="https://kohei6145.github.io/my_portfolio/" class="portfolio_link">
                         <div class="pf-item">
                             <img src="./image/my_pf.jpeg" alt="portfolio" />
                             <div class="mask1"></div>
@@ -167,7 +167,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="index.js"></script>
-    <script src="/wow.min.js"></script>
+    <script src="https://kohei6145.github.io/my_portfolio/index.js"></script>
+    <script src="https://kohei6145.github.io/my_portfolio/wow.min.js"></script>
 </body>
 </html>
