--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="https://kohei6145.github.io/my_portfolio/style.css">
+    <link rel="stylesheet" href="https://kohei6145.github.io/my_portfolio/reset.css">
+    <link rel="stylesheet" href="https://kohei6145.github.io/my_portfolio/animate.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
