--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="allcontainer">
         <div class="about">
             <div class="about-inner">
-                <div class="cmn-title"><p>ABOUT ME</p></div>
-                <div class="about-container">
+                <div class="cmn-title wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100"><p>ABOUT ME</p></div>
+                <div class="about-container wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                     <div class="about-sent">
                         <p class="p1">1999年：山口県岩国市出身</p>
                         <p class="p2">2018年：広島私立広島新庄高校卒業</p>
@@ -62,22 +62,22 @@
         </div>
         <div class="skill">
             <div class="skill-inner">
-                <div class="cmn-title"><p>SKILL</p></div>
+                <div class="cmn-title wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100"><p>SKILL</p></div>
                 <div class="skill-container">
                     <ul class="skill-list">
-                        <li class="skill-item">
+                        <li class="skill-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                             <img src="./image/HTML.jpg" alt="frontend languages" />
                             <p>Level: ★★★★★</p>
                         </li>
-                        <li class="skill-item">
+                        <li class="skill-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                             <img src="./image/CSS.jpg" alt="frontend languages" />
                             <p>Level: ★★★★★</p>
                         </li>
-                        <li class="skill-item">
+                        <li class="skill-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                             <img src="./image/Javascript.jpg" alt="frontend languages" />
                             <p>Level: ★★★★☆</p>
                         </li>
-                        <li class="skill-item">
+                        <li class="skill-item wow fadeIn" data-wow-duration=".8s" data-wow-iteration="1" data-wow-offset="50">
                             <img src="./image/Wordpress.jpg" alt="frontend languages" />
                             <p>Level: ★★★★☆</p>
                         </li>
@@ -87,9 +87,9 @@
         </div>
         <div class="portfolio">
             <div class="pf-inner">
-                <div class="cmn-title"><p>PORTFOLIO</p></div>
+                <div class="cmn-title wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100"><p>PORTFOLIO</p></div>
                 <div class="pf-container">
-                    <a href="https://kohei6145.github.io/my_portfolio/" class="portfolio_link">
+                    <a href="https://kohei6145.github.io/my_portfolio/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="pf-item">
                             <img src="./image/my_pf.jpeg" alt="portfolio" />
                             <div class="mask1"></div>
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://gokurakutei.t-kou.info/" class="portfolio_link">
+                    <a href="https://gokurakutei.t-kou.info/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="pf-item">
                             <img src="./image/gokurakutei.jpeg" alt="portfolio" />
                             <div class="mask1"></div>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://t-kou.info/" class="portfolio_link">
+                    <a href="https://t-kou.info/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="pf-item">
                             <img src="./image/codimgschool_img.jpeg" alt="portfolio" />
                             <div class="mask1"></div>
@@ -136,9 +136,9 @@
         </div>
         <div class="service">
             <div class="service-inner">
-                <div class="cmn-title"><p>SERVICE</p></div>
+                <div class="cmn-title wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100"><p>SERVICE</p></div>
                 <div class="service-container">
-                    <div class="service-item">
+                    <div class="service-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="service-image"><img src="image/PF_coding.png" alt=""></div>
                         <p class="service-item-title">コーディング</p>
                         <div class="service-item-cont">
@@ -147,7 +147,7 @@
                             <p class="price-sent">LP制作: ¥20,000~</p>
                         </div>
                     </div>
-                    <div class="service-item">
+                    <div class="service-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="service-image"><img src="image/PF_wp.png" alt=""></div>
                         <p class="service-item-title">Wordpress</p>
                         <div class="service-item-cont">
@@ -157,14 +157,14 @@
                         </div>
                     </div>
                 </div>
-                <p class="pf">※正式なお見積もりは、別途ご相談させていただきます。</p>
+                <p class="pf wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">※正式なお見積もりは、別途ご相談させていただきます。</p>
             </div>
         </div>
         <footer class="footer">
             <div class="f-inner">
-                <div class="cmn-title"><p>CONTACT</p></div>
-                <p class="contact-pf">ご依頼(ご相談)はメールよりお願いいたします。</p>
-                <div class="contact">
+                <div class="cmn-title wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100"><p>CONTACT</p></div>
+                <p class="contact-pf wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">ご依頼(ご相談)はメールよりお願いいたします。</p>
+                <div class="contact wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                     <ul class="follow-me">
                         <li><a href="mailto:tao6kou@gmail.com?body=ご依頼/ご相談内容" class="gmail"></a></li>
                         <li><a href="https://twitter.com/Taokoubb6" class="twitter"></a></li>
