--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <div class="service-item-cont">
                             <p class="service-item-sent">コーポレートサイトやLPサイト、ブログなどをご提供いただいた掲載素材をもとにお客様のホームページを仕上げていきます。(レスポンシブ対応可)</p>
                             <div class="price">【目安料金】</div>
-                            <p class="price-sent">LP制作: ¥20,000~</p>
+                            <p class="price-sent">LP制作: ¥30,000~</p>
                         </div>
                     </div>
                     <div class="service-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
@@ -153,7 +153,8 @@
                         <div class="service-item-cont">
                             <p class="service-item-sent">コーポレートサイトや個人ブログなど、関連記事一覧などを含めた複数ページにわたるサイトの構築に対応しております。(レスポンシブ対応可)</p>
                             <div class="price">【目安料金】</div>
-                            <p class="price-sent">Wordpress: ¥100,000~</p>
+                            <p class="price-sent">Wordpress移行: ¥100,000~</p>
+                            <p class="price-sent">Wordpress構築: ¥200,000~</p>
                         </div>
                     </div>
                 </div>
