--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </a>
                     <a href="https://t-kou.info/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="pf-item">
-                            <img src="./image/codimgschool_img.jpeg" alt="portfolio" />
+                            <img src="./image/gokurakutei.jpeg" alt="portfolio" />
                             <div class="mask1"></div>
                             <div class="mask2"></div>
                             <div class="caption">
