--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="about-sent">
                         <p class="p1">1999年：山口県岩国市出身</p>
                         <p class="p2">2018年：広島私立広島新庄高校卒業</p>
-                        <p class="p3">小学1年から高校3年まで野球部に所属  (高校では県大会優勝2回,準優勝1回)</p>
+                        <p class="p3">小学1年から高校3年まで野球部に所属  (高校では県大会優勝2回、準優勝1回)</p>
                         <p class="p4">高校卒業後プログラミングにシフト  (2019年 7月〜)</p>
                         <p class="p5">MESSAGE</p>
                         <p class="p6">はじめまして。WebエンジニアのKoheiと申します。現在フロントエンドを中心にWebサイト制作を行なっております。
