--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <p class="p3">小学1年から高校3年まで野球部に所属  (高校では県大会優勝2回,準優勝1回)</p>
                         <p class="p4">高校卒業後プログラミングにシフト  (2019年 7月〜)</p>
                         <p class="p5">MESSAGE</p>
-                        <p class="p6">はじめまして。WebエンジニアのKoheiと申します。現在フロントエンドを中心にWebサイト制作を行なっております。
+                        <p class="p6">はじめまして、WebエンジニアのKoheiと申します。現在フロントエンドを中心にWebサイト制作を行なっております。
                             質とスピードを重視するとともに、クライアント様に寄り添った丁寧なコミュニケーションを心がけています。最後まで責任を持ち、期待以上の物を提供させていただきます。どうぞよろしくお願い致します。</p>
                     </div>
                     <div class="about-image"><img src="image/myphoto.jpeg" alt=""></div>
