--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="service-image"><img src="image/PF_wp.png" alt=""></div>
                         <p class="service-item-title">Wordpress</p>
                         <div class="service-item-cont">
-                            <p class="service-item-sent">コーポレートサイトや個人ブログなど、関連記事一覧などを含めた複数ページにわたるサイトの構築に対応しております。(レスポンシブ対応可)</p>
+                            <p class="service-item-sent">コーポレートサイトや個人ブログなどの関連記事一覧などを含めた複数ページにわたるサイトの構築に対応しております。(レスポンシブ対応可)</p>
                             <div class="price">【目安料金】</div>
                             <p class="price-sent">Wordpress移行: ¥100,000~</p>
                             <p class="price-sent">Wordpress構築: ¥200,000~</p>
