--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                         <p class="service-item-title">コーディング</p>
                         <div class="service-item-cont">
                             <p class="service-item-sent">コーポレートサイトやLPサイト、ブログなどをご提供いただいた掲載素材をもとにお客様のホームページを仕上げていきます。(レスポンシブ対応可)</p>
-                            <div class="price">【目安料金】</div>
-                            <p class="price-sent">LP制作: ¥10,000~</p>
+                            <!-- <div class="price">【目安料金】</div>
+                            <p class="price-sent">LP制作: ¥10,000~</p> -->
                         </div>
                     </div>
                     <div class="service-item wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
@@ -152,9 +152,9 @@
                         <p class="service-item-title">Wordpress</p>
                         <div class="service-item-cont">
                             <p class="service-item-sent">コーポレートサイトや個人ブログなどの関連記事一覧などを含めた複数ページにわたるサイトの構築に対応しております。(レスポンシブ対応可)</p>
-                            <div class="price">【目安料金】</div>
+                            <!-- <div class="price">【目安料金】</div>
                             <p class="price-sent">Wordpress移行: ¥80,000~</p>
-                            <p class="price-sent">Wordpress構築: ¥150,000~</p>
+                            <p class="price-sent">Wordpress構築: ¥150,000~</p> -->
                         </div>
                     </div>
                 </div>
