ポートフォリオ追加

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://fktec.tkou.net/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
+                        <div class="pf-item">
+                            <img src="./image/fkss.jpeg" alt="portfolio" />
+                            <div class="mask1"></div>
+                            <div class="mask2"></div>
+                            <div class="caption">
+                                <p>【Category】(有)FK-TEC公式HP
+                                    【Title】FK-TEC公式ホームページ<br><br>
+                                    【Skill】HTML / CSS / JQuery / Wordpress / Snow Monkey<br><br>
+                                    【Detail】(有)FK-TECさんの公式HPを作らせていただきました。Snow Monkeyを使って作成しました。
+                                </p>
+                            </div>
+                        </div>
+                    </a>
                     <a href="https://t-kou.info/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="pf-item">
                             <img src="./image/gokurakutei.jpeg" alt="portfolio" />
@@ -113,20 +127,6 @@
                                     【Title】京の旅館　Gokurakutei<br><br>
                                     【Skill】HTML / CSS / JQuery / Wordpress<br><br>
                                     【Detail】架空旅館のオリジナルサイトです
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="https://tao-kou.com/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
-                        <div class="pf-item">
-                            <img src="./image/screenshot.jpeg" alt="portfolio" />
-                            <div class="mask1"></div>
-                            <div class="mask2"></div>
-                            <div class="caption">
-                                <p>【Category】オリジナル作品<br><br>
-                                    【Title】架空博物館　K museum<br><br>
-                                    【Skill】HTML / CSS / JQuery / Wordpress<br><br>
-                                    【Detail】架空博物館のオリジナルサイトです
                                 </p>
                             </div>
                         </div>
