--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="caption">
                                 <p>【Category】(有)FK-TEC公式HP<br><br>
                                     【Title】FK-TEC公式ホームページ<br><br>
-                                    【Skill】HTML / CSS / JQuery / Wordpress / Snow Monkey<br><br>
+                                    【Skill】HTML / CSS / Wordpress / Snow Monkey<br><br>
                                     【Detail】(有)FK-TECさんの公式HPを作らせていただきました。Snow Monkeyを使って作成しました。
                                 </p>
                             </div>
