--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 <div class="contact wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                     <ul class="follow-me">
                         <li><a href="mailto:tao6kou@gmail.com?body=ご依頼/ご相談内容" class="gmail"></a></li>
-                        <li><a href="https://twitter.com/Taokoubb6" class="twitter"></a></li>
-                        <li><a href="https://www.instagram.com/taodaooo/" class="instagram"></a></li>
+                        <!-- <li><a href="https://twitter.com/Taokoubb6" class="twitter"></a></li>
+                        <li><a href="https://www.instagram.com/taodaooo/" class="instagram"></a></li> -->
                     </ul>
                 </div>
                 <div class="copy-right">Copyright &copy; 2021 Kohei Tao's Protfolio All Rights Reserved.</div>
