--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
             <div class="pf-inner">
                 <div class="cmn-title wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100"><p>PORTFOLIO</p></div>
                 <div class="pf-container">
-                    <a href="https://kohei6145.github.io/my_portfolio/" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
+                    <a href="https://kaneda-dmendo-cl.com" class="portfolio_link wow fadeIn" data-wow-duration="1s" data-wow-iteration="1" data-wow-offset="100">
                         <div class="pf-item">
-                            <img src="./image/my_pf.jpeg" alt="portfolio" />
+                            <img src="./image/kaneda.jpeg" alt="portfolio" />
                             <div class="mask1"></div>
                             <div class="mask2"></div>
                             <div class="caption">
-                                <p>【Category】オリジナル作品<br><br>
-                                【Title】Kohei Tao's Portfolio<br><br>
+                                <p>【Category】かねだ内科クリニック様HP<br><br>
+                                【Title】かねだ内科クリニックホームページ<br><br>
                                 【Skill】HTML / CSS / JQuery<br><br>
-                                【Detail】私のことをよく知ってもらうためのサイトです。
+                                【Detail】かねだ内科クリニック様のホームページを作らせていただきました。
                                 </p>
                             </div>
                         </div>
