--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="service-image"><img src="image/PF_coding.png" alt=""></div>
                         <p class="service-item-title">コーディング</p>
                         <div class="service-item-cont">
-                            <p class="service-item-sent">コーポレートサイトやLPサイト、ブログなどをご提供いただいた掲載素材をもとにお客様のホームページを仕上げていきます。(レスポンシブ対応可)</p>
+                            <p class="service-item-sent">コーポレートサイトやLP、ブログなどをご提供いただいた掲載素材をもとにお客様のホームページを仕上げていきます。(レスポンシブ対応可)</p>
                             <!-- <div class="price">【目安料金】</div>
                             <p class="price-sent">LP制作: ¥10,000~</p> -->
                         </div>
